trocado de Bermuda para Calça jeans

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <td>em estoque</td>
       </tr>
       <tr>
-        <td>Bermuda</td>
+        <td>Calça jeans</td>
         <td>Vermelha</td>
         <td>P</td>
         <td>R$ 160,00</td>
